--- a/nginx/app/nginx.conf
+++ b/nginx/app/nginx.conf
@@ -1,3 +1,7 @@
+upstream api_upstream{
+    server world;
+}
+
 server {
     listen 80;
     listen 443 ssl;
@@ -17,13 +21,17 @@ server {
 
     location /foo {
         root  /app/foo;
-        try_files $uri $uri/ /index.html
+        try_files $uri $uri/ /index.html;
         index index.html;
     }
 
     location /bar {
         root /app/bar;
-        try_files /index.html
+        try_files $uri /index.html;
         index index.html;
+    }
+
+    location /pass/ {
+        proxy_pass http://api_upstream/index.html;
     }
 }
