--- a/nginx/app/nginx.conf
+++ b/nginx/app/nginx.conf
@@ -1,5 +1,5 @@
 upstream api_upstream{
-    server world;
+    server piwik:8000;
 }
 
 server {
@@ -11,27 +11,11 @@ server {
     ssl_certificate /app/certificate.crt;
     ssl_certificate_key /app/private.key;
     
-    index index.html index.htm;
+    index index.php index.html index.htm;
 
     server_name localhost rpc1999.com;
 
     location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /foo {
-        root  /app/foo;
-        try_files $uri $uri/ /index.html;
-        index index.html;
-    }
-
-    location /bar {
-        root /app/bar;
-        try_files $uri /index.html;
-        index index.html;
-    }
-
-    location /pass/ {
-        proxy_pass http://api_upstream/index.html;
+        proxy_pass http://api_upstream/;
     }
 }
